Adminer dev:
PostgreSQL: Fix export of indexes with expressions (bug #768)
SQLite: Support CHECK constraint
SQLite: Add command Check tables
SQLite: Display all rows of variable values
SQLite: Remove support for SQLite version 2
MS SQL: Support export (bug #480)
MS SQL: Display foreign keys ON UPDATE and ON DELETE
MS SQL: Fix altering foreign key
MS SQL PDO: Support offset
MS SQL: Remove support for MSSQL extension
MS SQL: Add support for PDO_SQLSRV extension
MongoDB: Remove support for deprecated extension mongo

Adminer 4.17.1 (released 2025-02-25):
MySQL: Fix typo in the date type (regression from 4.17.0)

Adminer 4.17.0 (released 2025-02-24):
Hide index column options by default
Offer original values in multi-row editing (regression from 4.16.0)
Print SQL errors as comments in export (regression from 3.2.0)
MySQL, PostgreSQL, MS SQL: Support CHECK constraint
MySQL: Show comments at routine call (bug #874)
MySQL: Don't offer empty enum value in edit
MySQL 9+: Support vector type
PostgreSQL: Link user defined types
PostgreSQL: Constraint enum values in editing (bug #270)
PostgreSQL: Export functions
PostgreSQL 8+: Fix exporting table constraints
SQLite: Show all supported pragmas in Variables
MS SQL: Allow altering table in non-default schema (bug #405)
MS SQL: Fix default values (bug #732, bug #733)
MS SQL: Fix length of nvarchar columns
Editor: PDO: Select value of foreign key in edit (bug #847)
Mobile devices: Use device width

Adminer 4.16.0 (released 2025-02-20):
MySQL: Fix saving bit(64) values (bug #839)
PostgreSQL: Preserve whitespace in EXPLAIN (bug #827)
PostgreSQL: Support SSL
PostgreSQL: Support altering auto_increment (bug #761)
SQLite: Fix altering forign keys (bug #841)
SQLite: Fix expressions in default values (bug #860)
MS SQL: Foreign keys in non-default schema (bug #833)
Oracle: Include tables granted by other user
MongoDB: Execute commands against the selected DB

Adminer 4.15.0:
Escape unknown field in select